[gd_scene load_steps=2 format=2]

[ext_resource path="res://demo.gd" type="Script" id=1]

[node name="demo" type="Node2D"]
script = ExtResource( 1 )

[node name="GUI" type="CanvasLayer" parent="."]

[node name="get_random_points" type="Button" parent="GUI"]
margin_left = 16.0
margin_top = 16.0
margin_right = 148.0
margin_bottom = 50.0
text = "Get random points"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="input_points" type="TextEdit" parent="GUI"]
margin_left = 160.0
margin_top = 16.0
margin_right = 232.0
margin_bottom = 48.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="GUI/get_random_points" to="." method="_on_get_random_points_pressed"]
